--- a/templates/weather/index.html
+++ b/templates/weather/index.html
@@ -9,7 +9,7 @@
   <body>
     <nav class="navbar bg-dark navbar-dark text-white ">
         <div class="container text-center d-inline ">
-          <h1>Worlds Weather App</h1>
+          <h1>World Weather App</h1>
         </div>
       </nav>
 <div class="container mt-4  "> 
